<?xml version="1.0"?>
<package format="2">
  <name>kinodynamic_demos</name>
  <version>0.1.0</version>
  <description>Kinodynamic planning demos with the DART/Aikido stack</description>
  <license>UNRELEASED</license>

  <maintainer email="dqyi@cs.uw.edu">Brian Hou</maintainer>

  <depend>boost</depend>
  <depend>dartsim</depend>
  <depend>eigen</depend>
  <depend>aikido</depend>
  <depend>libherb</depend>
  <depend>magi</depend>

  <depend>herb_description</depend>
  <depend>pr_ordata</depend>
  <depend>pr_tsr</depend>

  <!-- This is required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>clang-format-3.8</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
